[package]
name = "karlsen-consensus"
description = "Karlsen consensus library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arc-swap.workspace = true
async-channel.workspace = true
bincode.workspace = true
crossbeam-channel.workspace = true
faster-hex.workspace = true
futures-util.workspace = true
indexmap.workspace = true
itertools.workspace = true
karlsen-consensus-core.workspace = true
karlsen-consensus-notify.workspace = true
karlsen-consensusmanager.workspace = true
karlsen-core.workspace = true
karlsen-database.workspace = true
karlsen-hashes.workspace = true
karlsen-math.workspace = true
karlsen-merkle.workspace = true
karlsen-muhash.workspace = true
karlsen-notify.workspace = true
karlsen-pow.workspace = true
karlsen-txscript.workspace = true
karlsen-txscript-errors.workspace = true
karlsen-utils.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
rayon.workspace = true
rocksdb.workspace = true
secp256k1.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio.workspace = true

rand = { workspace = true, features = ["small_rng"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true
flate2.workspace = true
rand_distr.workspace = true
karlsen-txscript-errors.workspace = true
karlsen-addresses.workspace = true

[[bench]]
name = "hash_benchmarks"
harness = false

[[bench]]
name = "check_scripts"
harness = false

[features]
html_reports = []
devnet-prealloc = ["karlsen-consensus-core/devnet-prealloc"]
