[package]
name = "rothschild"
description = "Karlsen Transaction Generator"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
karlsen-addresses.workspace = true
karlsen-consensus-core.workspace = true
karlsen-core.workspace = true
karlsen-grpc-client.workspace = true
karlsen-notify.workspace = true
karlsen-rpc-core.workspace = true
karlsen-txscript.workspace = true
karlsen-utils.workspace = true

async-channel.workspace = true
clap.workspace = true
faster-hex.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
rayon.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false
