[package]
name = "simpa"
description = "Karlsen Network Simulator"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
karlsen-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first 
karlsen-consensus-core.workspace = true
karlsen-consensus-notify.workspace = true
karlsen-consensus.workspace = true
karlsen-core.workspace = true
karlsen-database.workspace = true
karlsen-hashes.workspace = true
karlsen-perf-monitor.workspace = true
karlsen-utils.workspace = true

async-channel.workspace = true
clap.workspace = true
dhat = { workspace = true, optional = true }
futures-util.workspace = true
futures.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
secp256k1.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[features]
heap = ["dhat", "karlsen-alloc/heap"]
