[package]
name = "karlsen-consensusmanager"
description = "Karlsen consensus library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duration-string.workspace = true
futures-util.workspace = true
futures.workspace = true
itertools.workspace = true
karlsen-addresses.workspace=true
karlsen-consensus-core.workspace = true
karlsen-consensus-notify.workspace = true
karlsen-core.workspace = true
karlsen-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
tokio.workspace = true
