[package]
name = "karlsen-consensus-client"
description = "Karlsen consensus client data structures"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = []
wasm32-types = []

[dependencies]
karlsen-addresses.workspace = true
karlsen-consensus-core.workspace = true
karlsen-hashes.workspace = true
karlsen-math.workspace = true
karlsen-txscript.workspace = true
karlsen-utils.workspace = true
karlsen-wasm-core.workspace = true

ahash.workspace = true
cfg-if.workspace = true
faster-hex.workspace = true
hex.workspace = true
js-sys.workspace = true
rand.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
itertools.workspace = true

workflow-wasm.workspace = true
workflow-log.workspace = true

[lints]
workspace = true
