[package]
name = "karlsen-pow"
description = "Karlsen proof-of-work"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = []

[dependencies]
js-sys.workspace = true
karlsen-consensus-core.workspace = true
karlsen-consensus-client.workspace = true
karlsen-hashes.workspace = true
karlsen-math.workspace = true
karlsen-utils.workspace = true
wasm-bindgen.workspace = true
workflow-wasm.workspace = true
num.workspace = true

[lints]
workspace = true
