[package]
name = "karlsen-hashes"
description = "Karlsen hashing functions"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
no-asm = ["keccak"]

[dependencies]
lazy_static = "1.4.0"
blake2b_simd.workspace = true
borsh.workspace = true
faster-hex.workspace = true
js-sys.workspace = true
karlsen-utils.workspace = true
keccak = { workspace = true, optional = true }
blake3.workspace = true
tiny-keccak.workspace = true
once_cell.workspace = true
serde.workspace = true
sha2.workspace = true
wasm-bindgen.workspace = true
workflow-wasm.workspace = true

[target.'cfg(any(target_os = "windows", not(target_arch = "x86_64")))'.dependencies]
keccak.workspace = true
blake3.workspace = true

[dev-dependencies]
criterion.workspace = true
rand.workspace = true
sha3.workspace = true

[build-dependencies]
cc.workspace = true

[[bench]]
name = "bench"
harness = false
