[package]
name = "karlsen-hashes"
description = "Karlsen hashing functions"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lazy_static = "1.4.0"
log.workspace = true
num_cpus.workspace = true
blake2b_simd.workspace = true
borsh.workspace = true
faster-hex.workspace = true
js-sys.workspace = true
karlsen-utils.workspace = true
keccak = { workspace = true, optional = true }
blake3.workspace = true
tiny-keccak.workspace = true
once_cell.workspace = true
serde.workspace = true
sha2.workspace = true
wasm-bindgen.workspace = true
workflow-wasm.workspace = true

[build-dependencies]
cc.workspace = true
