[package]
name = "karlsen-merkle"
description = "Karlsen merkle tree library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
karlsen-hashes.workspace = true

[lints]
workspace = true