[package]
name = "karlsen-txscript"
description = "Karlsen txscript engine library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[[example]]
name = "kip-10"

[features]
wasm32-core = []
wasm32-sdk = []

[dependencies]
blake2b_simd.workspace = true
borsh.workspace = true
cfg-if.workspace = true
hexplay.workspace = true
indexmap.workspace = true
itertools.workspace = true
karlsen-addresses.workspace = true
karlsen-consensus-core.workspace = true
karlsen-hashes.workspace = true
karlsen-txscript-errors.workspace = true
karlsen-utils.workspace = true
karlsen-wasm-core.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
sha2.workspace = true
smallvec.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
workflow-wasm.workspace = true

[dev-dependencies]
criterion.workspace = true
smallvec.workspace = true
hex.workspace = true
serde_json.workspace = true

[[bench]]
name = "bench"
harness = false
