[package]
name = "kaspa-index-processor"
description = "Karlsen index processor"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
karlsen-consensus-core.workspace = true
karlsen-consensus-notify.workspace = true
karlsen-consensusmanager.workspace = true
karlsen-core.workspace = true
kaspa-database.workspace = true
kaspa-hashes.workspace = true
kaspa-index-core.workspace = true
kaspa-notify.workspace = true
kaspa-utils.workspace = true
karlsen-utxoindex.workspace = true

async-channel.workspace = true
async-trait.workspace = true
derive_more.workspace = true
futures.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread", "macros", "signal" ]}
triggered.workspace = true

[dev-dependencies]
karlsen-consensus.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
rand = {workspace = true,  features = [ "small_rng" ]}