[package]
name = "kaspa-rpc-core"
description = "Karlsen RPC core"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = [
    "karlsen-consensus-client/wasm32-sdk",
    "karlsen-consensus-wasm/wasm32-sdk"
]

[dependencies]
karlsen-addresses.workspace = true
karlsen-consensus-core.workspace = true
karlsen-consensus-client.workspace = true
karlsen-consensus-notify.workspace = true
karlsen-consensus-wasm.workspace = true
karlsen-core.workspace = true
kaspa-hashes.workspace = true
kaspa-index-core.workspace = true
kaspa-math.workspace = true
kaspa-mining-errors.workspace = true
kaspa-notify.workspace = true
kaspa-txscript.workspace = true
kaspa-utils.workspace = true
kaspa-rpc-macros.workspace = true

async-channel.workspace = true
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
downcast.workspace = true
faster-hex.workspace = true
hex.workspace = true
js-sys.workspace = true
log.workspace = true
paste.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
uuid.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-wasm.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints.clippy]
empty_docs = "allow"
