[package]
name = "kaspa-rpc-service"
description = "Karlsen RPC service"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
karlsen-addresses.workspace = true
karlsen-consensus-core.workspace = true
karlsen-consensus-notify.workspace = true
karlsen-consensusmanager.workspace = true
karlsen-core.workspace = true
kaspa-hashes.workspace = true
kaspa-index-core.workspace = true
kaspa-math.workspace = true
kaspa-mining.workspace = true
kaspa-notify.workspace = true
kaspa-p2p-flows.workspace = true
kaspa-p2p-lib.workspace = true
kaspa-perf-monitor.workspace = true
kaspa-rpc-core.workspace = true
kaspa-txscript.workspace = true
kaspa-utils.workspace = true
kaspa-utils-tower.workspace = true
karlsen-utxoindex.workspace = true

async-trait.workspace = true
log.workspace = true
tokio.workspace = true
triggered.workspace = true
workflow-rpc.workspace = true
