[package]
name = "karlsen-rpc-service"
description = "Karlsen RPC service"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
karlsen-addresses.workspace = true
karlsen-consensus-core.workspace = true
karlsen-consensus-notify.workspace = true
karlsen-consensusmanager.workspace = true
karlsen-core.workspace = true
karlsen-hashes.workspace = true
karlsen-index-core.workspace = true
karlsen-math.workspace = true
karlsen-mining.workspace = true
karlsen-notify.workspace = true
karlsen-p2p-flows.workspace = true
karlsen-p2p-lib.workspace = true
karlsen-p2p-mining.workspace = true
karlsen-perf-monitor.workspace = true
karlsen-rpc-core.workspace = true
karlsen-txscript.workspace = true
karlsen-utils.workspace = true
karlsen-utils-tower.workspace = true
karlsen-utxoindex.workspace = true

async-trait.workspace = true
log.workspace = true
tokio.workspace = true
triggered.workspace = true
workflow-rpc.workspace = true
