[package]
name = "karlsen-testing-integration"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
karlsen-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first

karlsen-addresses.workspace = true
karlsen-bip32.workspace = true
karlsen-consensus-core.workspace = true
karlsen-consensus-notify.workspace = true
karlsen-consensus.workspace = true
karlsen-consensusmanager.workspace = true
karlsen-core.workspace = true
karlsen-database.workspace = true
karlsen-grpc-client.workspace = true
karlsen-grpc-core.workspace = true
karlsen-grpc-server.workspace = true
karlsen-hashes.workspace = true
karlsen-index-processor.workspace = true
karlsen-math.workspace = true
karlsen-merkle.workspace = true
karlsen-muhash.workspace = true
karlsen-notify.workspace = true
karlsen-pow.workspace = true
karlsen-rpc-core.workspace = true
karlsen-rpc-service.workspace = true
karlsen-txscript.workspace = true
karlsen-utils.workspace = true
karlsen-utxoindex.workspace = true
karlsen-wrpc-server.workspace = true
karlsend.workspace = true

async-channel.workspace = true
async-trait.workspace = true
bincode.workspace = true
clap.workspace = true
chrono.workspace = true
crossbeam-channel.workspace = true
dhat = { workspace = true, optional = true }
faster-hex.workspace = true
flate2.workspace = true
futures-util.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
rocksdb.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde.workspace = true
smallvec.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
workflow-perf-monitor.workspace = true

[dev-dependencies]
criterion.workspace = true
rand = { workspace = true, features = ["small_rng"] }
tokio = { workspace = true, features = ["rt", "macros", "process"] }
karlsen-txscript-errors.workspace = true

[features]
heap = ["dhat"]
html_reports = []
devnet-prealloc = ["karlsend/devnet-prealloc"]
