[package]
name = "karlsen-wallet-pskt"
keywords = ["karlsen", "wallet", "pskt", "psbt", "bip-370"]
description = "Partially Signed Karlsen Transaction"
categories = ["cryptography::cryptocurrencies"]
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
include.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
wasm32-sdk = ["karlsen-consensus-client/wasm32-sdk"]
wasm32-types = ["karlsen-consensus-client/wasm32-types"]

[dependencies]
karlsen-addresses.workspace = true
karlsen-bip32.workspace = true
karlsen-consensus-client.workspace = true
karlsen-consensus-core.workspace = true
karlsen-txscript-errors.workspace = true
karlsen-txscript.workspace = true
karlsen-utils.workspace = true

bincode.workspace = true
derive_builder.workspace = true
js-sys.workspace = true
futures.workspace = true
hex.workspace = true
secp256k1.workspace = true
serde_repr.workspace = true
serde-value.workspace = true
serde.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
workflow-wasm.workspace = true

[dev-dependencies]
serde_json.workspace = true
