[package]
name = "karlsen-grpc-client"
description = "Karlsen gRPC client"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
karlsen-core.workspace = true
karlsen-grpc-core.workspace = true
karlsen-notify.workspace = true
karlsen-rpc-core.workspace = true
karlsen-utils.workspace = true
karlsen-utils-tower.workspace = true

async-channel.workspace = true
async-stream.workspace = true
async-trait.workspace = true
faster-hex.workspace = true
futures.workspace = true
h2.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
paste.workspace = true
prost.workspace = true
rand.workspace = true
regex.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tokio-stream.workspace = true
tonic = { workspace = true, features = ["gzip"] }
triggered.workspace = true
futures-util.workspace = true
rustls.workspace = true

[features]
heap = []
