[package]
name = "karlsen-grpc-server"
description = "Karlsen gRPC server"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
karlsen-consensus-core.workspace = true
karlsen-core.workspace = true
karlsen-grpc-core.workspace = true
karlsen-notify.workspace = true
karlsen-rpc-core.workspace = true
karlsen-rpc-macros.workspace = true
karlsen-rpc-service.workspace = true
karlsen-utils-tower.workspace = true
karlsen-utils.workspace = true

async-channel.workspace = true
async-stream.workspace = true
async-trait.workspace = true
faster-hex.workspace = true
futures.workspace = true
h2.workspace = true
itertools.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
paste.workspace = true
prost.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream.workspace = true
tonic = { workspace = true, features = ["gzip"] }
triggered.workspace = true
uuid.workspace = true

[dev-dependencies]
karlsen-grpc-client.workspace = true
