[package]
name = "karlsen-wrpc-client"
description = "Karlsen wRPC client"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = ["karlsen-consensus-wasm/wasm32-sdk","karlsen-rpc-core/wasm32-sdk","workflow-rpc/wasm32-sdk"]
default = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
async-std.workspace = true
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
futures.workspace = true
js-sys.workspace = true
karlsen-addresses.workspace = true
karlsen-consensus-core.workspace = true
karlsen-consensus-wasm.workspace = true
karlsen-notify.workspace = true
karlsen-rpc-core.workspace = true
karlsen-rpc-macros.workspace = true
paste.workspace = true
rand.workspace = true
regex.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-dom.workspace = true
workflow-http.workspace = true
workflow-log.workspace = true
workflow-rpc.workspace = true
workflow-serializer.workspace = true
workflow-wasm.workspace = true
