[package]
name = "karlsen-wrpc-proxy"
description = "Karlsen wRPC to gRPC proxy"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
clap.workspace = true
karlsen-consensus-core.workspace = true
karlsen-grpc-client.workspace = true
karlsen-rpc-core.workspace = true
karlsen-rpc-macros.workspace = true
karlsen-wrpc-server.workspace = true
num_cpus.workspace = true
thiserror.workspace = true
tokio.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
workflow-rpc.workspace = true

[package.metadata.emanate.build]
folder = "setup"

[lints]
workspace = true